--- a/views/graph.tt
+++ b/views/graph.tt
@@ -118,8 +118,8 @@
             <th></th>
             <th>Title</th>
             <th>Type</th>
-            <th>View</th>
             <th>X-axis</th>
+            <th>Y-axis</th>
             <th>Group by</th>
         </tr>
         [% FOREACH graph IN graphs %]
@@ -127,9 +127,9 @@
                 <td><a href="/graph/[% graph.id %]">Edit</a></td>
                 <td>[% graph.title | html_entity %]
                 <td>[% graph.type.ucfirst %]</td>
-                <td>[% graph.view.name | html_entity %]</td>
-                <td>[% graph.layout.name | html_entity %]</td>
-                <td>[% graph.group_by.name %]</td>
+                <td>[% graph.x_axis.name | html_entity %]</td>
+                <td>[% graph.y_axis.name | html_entity %]</td>
+                <td>[% graph.group_by.name | html_entity %]</td>
             </tr>
         [% END %]
     </table>
