--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -1,58 +1,62 @@
 [% FILTER collapse %]
-<table class="table table-striped">
-    <tr>
-        [% IF sort.id == -1 AND sort.type == "asc" %]
-            [% st = "&#9650;" %]
-        [% ELSIF sort.id == -1 %]
-            [% st = "&#9660;" %]
-        [% ELSE %]
-            [% st = "" %]
-        [% END %]
-        <th><a href="?sort=-1" style="color:black">Serial[% st %]</a></th>
-        [% peopcols = [] %]
-        [% FOREACH col IN columns %]
-            [% IF sort.id == col.id AND sort.type == "asc" %]
+<table class="table table-striped" id="datatable">
+    <thead>
+        <tr>
+            [% IF sort.id == -1 AND sort.type == "asc" %]
                 [% st = "&#9650;" %]
-            [% ELSIF sort.id == col.id %]
+            [% ELSIF sort.id == -1 %]
                 [% st = "&#9660;" %]
             [% ELSE %]
                 [% st = "" %]
             [% END %]
-            <th><a href="?sort=[% col.id %]" style="color:black">[% col.name | html_entity %][% IF col.id == sort.id %][% st %]</a>[% END %]
-                [% IF col.type == "person" AND user.permission.message AND records.size %]
-                    [% peopfield = "field" _ col.id %]
-                    [% peopcols.push(peopfield) %]
-                    <a href="" data-toggle="modal" data-target="#peopcol[% peopfield %]">
-                        <img src="/images/envw.png">
-                    </a>
+            <th><a href="?sort=-1" style="color:black">Serial[% st %]</a></th>
+            [% peopcols = [] %]
+            [% FOREACH col IN columns %]
+                [% IF sort.id == col.id AND sort.type == "asc" %]
+                    [% st = "&#9650;" %]
+                [% ELSIF sort.id == col.id %]
+                    [% st = "&#9660;" %]
+                [% ELSE %]
+                    [% st = "" %]
                 [% END %]
-            </th>
-        [% END %]
-    </tr>
-    [% FOREACH record IN records %]
-    <tr>
-        <td><a href="/record/[% record.shift %]">[% record.shift %]</a></td>
-        [% FOREACH item IN record %]
-            <td>
-            [% li = loop.index %]
-            [% IF columns.$li.type == "rag" %]
-                <div class="circ-large
-                    [% item %]
-                    ">
-                </div>
-            [% ELSIF columns.$li.type == "string" %]
-                <div class="more-less">
-                    <div class="more-block">
-                        <p>[% item %]</p>
-                    </div>
-                </div>
-            [% ELSE %]
-                <p>[% item %]</p>
+                <th><a href="?sort=[% col.id %]" style="color:black">[% col.name | html_entity %][% IF col.id == sort.id %][% st %]</a>[% END %]
+                    [% IF col.type == "person" AND user.permission.message AND records.size %]
+                        [% peopfield = "field" _ col.id %]
+                        [% peopcols.push(peopfield) %]
+                        <a href="" data-toggle="modal" data-target="#peopcol[% peopfield %]">
+                            <img src="/images/envw.png">
+                        </a>
+                    [% END %]
+                </th>
             [% END %]
-            </td>
+        </tr>
+    </thead>
+    <tbody>
+        [% FOREACH record IN records %]
+        <tr>
+            <td><a href="/record/[% record.shift %]">[% record.shift %]</a></td>
+            [% FOREACH item IN record %]
+                <td>
+                [% li = loop.index %]
+                [% IF columns.$li.type == "rag" %]
+                    <div class="circ-large
+                        [% item %]
+                        ">
+                    </div>
+                [% ELSIF columns.$li.type == "string" %]
+                    <div class="more-less">
+                        <div class="more-block">
+                            <p>[% item %]</p>
+                        </div>
+                    </div>
+                [% ELSE %]
+                    <p>[% item %]</p>
+                [% END %]
+                </td>
+            [% END %]
+        </tr>
         [% END %]
-    </tr>
-    [% END %]
+    </tbody>
 </table>
 [% END %]
 <ul class="pagination">
@@ -112,6 +116,7 @@
     var jscode='[% FILTER remove('\n+') %]
         [% FILTER replace('\'', '\\\'') %]
             $(document).ready(function () {
+                $("#datatable").floatThead();
                 var adjustheight = 60;
                 var moreText = '+ More';
                 var lessText = '- Less';
