--- a/views/login.tt
+++ b/views/login.tt
@@ -91,8 +91,8 @@
                         </div>
                         <div class="form-group">
                             <label for="title">Title:
-                                [% IF config.register_title_help %]
-                                    <span style="font-weight:normal !important">[% config.register_title_help %]</span>
+                                [% IF instance.register_title_help %]
+                                    <span style="font-weight:normal !important">[% instance.register_title_help %]</span>
                                 [% END %]
                             </label>
                             <select class="form-control" id="title" name="title">
@@ -104,24 +104,24 @@
                         </div>
                         <div class="form-group">
                             <label for="email">Email:
-                                [% IF config.register_email_help %]
-                                    <span style="font-weight:normal !important">[% config.register_email_help %]</span>
+                                [% IF instance.register_email_help %]
+                                    <span style="font-weight:normal !important">[% instance.register_email_help %]</span>
                                 [% END %]
                             </label>
                             <input type="text" class="form-control" id="email" name="email">
                         </div>
                         <div class="form-group">
                             <label for="telephone">Telephone:
-                                [% IF config.register_telephone_help %]
-                                    <span style="font-weight:normal !important">[% config.register_telephone_help %]</span>
+                                [% IF instance.register_telephone_help %]
+                                    <span style="font-weight:normal !important">[% instance.register_telephone_help %]</span>
                                 [% END %]
                             </label>
                             <input type="text" class="form-control" id="telephone" name="telephone">
                         </div>
                         <div class="form-group">
                             <label for="title">Organisation:
-                                [% IF config.register_organisation_help %]
-                                    <span style="font-weight:normal !important">[% config.register_organisation_help %]</span>
+                                [% IF instance.register_organisation_help %]
+                                    <span style="font-weight:normal !important">[% instance.register_organisation_help %]</span>
                                 [% END %]
                             </label>
                             <select class="form-control" id="organisation" name="organisation">
@@ -133,8 +133,8 @@
                         </div>
                         <div class="form-group">
                             <label for="account_request_notes">Notes:
-                                [% IF config.register_notes_help %]
-                                    <span style="font-weight:normal !important">[% config.register_notes_help %]</span>
+                                [% IF instance.register_notes_help %]
+                                    <span style="font-weight:normal !important">[% instance.register_notes_help %]</span>
                                 [% END %]
                             </label>
                             <textarea class="form-control" name="account_request_notes" id="account_request_notes" rows="5"></textarea>
