--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -2,14 +2,14 @@
 <table class="table table-striped" id="datatable">
     <thead>
         <tr>
-            [% IF sort.id == -1 AND sort.type == "asc" %]
+            [% IF NOT sort.id AND sort.type == "asc" %]
                 [% st = "&#9650;" %]
-            [% ELSIF sort.id == -1 %]
+            [% ELSIF NOT sort.id %]
                 [% st = "&#9660;" %]
             [% ELSE %]
                 [% st = "" %]
             [% END %]
-            <th><a href="?sort=-1" style="color:black">Serial[% st %]</a></th>
+            <th><a href="?sort=" style="color:black">Serial[% st %]</a></th>
             [% peopcols = [] %]
             [% FOREACH col IN columns %]
                 [% IF sort.id == col.id AND sort.type == "asc" %]
@@ -21,9 +21,8 @@
                 [% END %]
                 <th><a href="?sort=[% col.id %]" style="color:black">[% col.name | html_entity %][% IF col.id == sort.id %][% st %]</a>[% END %]
                     [% IF col.type == "person" AND user.permission.message AND records.size %]
-                        [% peopfield = "field" _ col.id %]
-                        [% peopcols.push(peopfield) %]
-                        <a href="" data-toggle="modal" data-target="#peopcol[% peopfield %]">
+                        [% peopcols.push(col.id) %]
+                        <a href="" data-toggle="modal" data-target="#peopcol[% col.id %]">
                             <img src="/images/envw.png">
                         </a>
                     [% END %]
@@ -34,23 +33,24 @@
     <tbody>
         [% FOREACH record IN records %]
         <tr>
-            <td><a href="/record/[% record.shift %]">[% record.shift %]</a></td>
-            [% FOREACH item IN record %]
+            <td><a href="/record/[% record.record_id %]">[% record.current_id %]</a></td>
+            [% FOREACH column IN columns %]
+                [% colid = column.id %]
+                [% value = record.fields.$colid.html %]
                 <td>
-                [% li = loop.index %]
-                [% IF columns.$li.type == "rag" %]
+                [% IF column.type == "rag" %]
                     <div class="circ-large
-                        [% item %]
+                        [% value %]
                         ">
                     </div>
-                [% ELSIF columns.$li.type == "string" %]
+                [% ELSIF column.type == "string" %]
                     <div class="more-less">
                         <div class="more-block">
-                            <p>[% item %]</p>
+                            <p>[% value %]</p>
                         </div>
                     </div>
                 [% ELSE %]
-                    <p>[% item %]</p>
+                    <p>[% value %]</p>
                 [% END %]
                 </td>
             [% END %]
