--- a/views/tree.tt
+++ b/views/tree.tt
@@ -25,7 +25,7 @@
                         "themes" : { "stripes" : true },
                         'data' : {
                             'url' : function (node) {
-                                return '/tree' + new Date().getTime() + '/[% tree.id %]/[% tree.value %]';
+                                return '/tree' + new Date().getTime() + '/[% tree.id %]/[% tree.value.id %]';
                             },
                             'data' : function (node) {
                                 return { 'id' : node.id };
