--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -74,7 +74,7 @@
                                 [% END %]
                                 [% IF user.permission.layout OR user.permission.useradmin %]
                                     <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Configuration <b class="caret"></b></a>
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
                                     <ul class="dropdown-menu">
                                         [% IF user.permission.layout %]
                                             <li [% IF page=="layout" %]class="active"[% END %]><a href="[% url.page %]/layout/">Data Layout</a></li>
