Add correct graph x-axis label

--- a/views/data_graph.tt
+++ b/views/data_graph.tt
@@ -78,7 +78,7 @@
                                 xaxis: {
                                     renderer: $.jqplot.CategoryAxisRenderer,
                                     ticks: ticks,
-                                    label: "[% graph.x_axis %]",
+                                    label: "[% graph.x_axis_name %]",
                                     labelRenderer: $.jqplot.CanvasAxisLabelRenderer
                                 },
                                 yaxis: {
