--- a/views/tree.tt
+++ b/views/tree.tt
@@ -22,6 +22,7 @@
                 .jstree({
                     "core" : {
                         "check_callback" : true,
+                        "force_text" : true,
                         "themes" : { "stripes" : true },
                         'data' : {
                             'url' : function (node) {
