Set axes to always start at zero

--- a/views/data_graph.tt
+++ b/views/data_graph.tt
@@ -88,6 +88,7 @@
                                 }
                             },
                             axesDefaults: {
+                                min: 0,
                                 tickRenderer: $.jqplot.CanvasAxisTickRenderer ,
                                 tickOptions: {
                                   angle: -30,
