--- a/views/aup.tt
+++ b/views/aup.tt
@@ -1,4 +1,4 @@
-<iframe width="80%" height="400px" src="[% aup %]"></iframe>
+<iframe width="80%" height="400px" src="/aup_text"></iframe>
 <form method="post">
     <input type="submit" name="accepted" value="I accept">
 </form>
