--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -3038,7 +3038,7 @@ input[type="button"].btn-block {
   background:url(carat.png);
   background-repeat: no-repeat;
   background-position: top left;
-  color: transparent;
+  border-top: 0px;
   margin-left: 10px;
   margin-right: -10px;
   margin-top: -5px;
