--- a/views/user_status.tt
+++ b/views/user_status.tt
@@ -3,6 +3,6 @@ You last successful login was: [% lastlogin %]
 [% message %]
 <p></p>
 <form method="post">
-    <input type="submit" name="accepted" value="Continue">
+    <button type="submit" class="btn btn-primary" name="accepted" value="accepted">Continue</button>
 </form>
 
